--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   <button id="yellowBtn" onclick="showSection('yellow')">Yellow</button>
 </div>
 
-<!-- Main Section -->
 <div id="main" class="container">
   <h1>Eternal Brothers FC</h1>
   <h2>Add Player</h2>
@@ -113,7 +112,6 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   <button id="sendBtn" onclick="sendMessage()" disabled>Send</button>
 </div>
 
-<!-- Blue Team -->
 <div id="blue" class="container" style="background:#1565c0aa;">
   <h2>Blue Team</h2>
   <input type="text" id="blueInput" placeholder="Enter player name">
@@ -128,7 +126,6 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   </div>
 </div>
 
-<!-- Yellow Team -->
 <div id="yellow" class="container" style="background:#fdd835aa; color:#000;">
   <h2>Yellow Team</h2>
   <input type="text" id="yellowInput" placeholder="Enter player name">
@@ -143,34 +140,52 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   </div>
 </div>
 
-<!-- Supabase JS -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-// ---------------- Supabase ----------------
 const supabaseUrl = "https://wihhlvgkjglphjzhivdn.supabase.co";
-const supabaseAnonKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemhpdmRuIiwicm9uIiwiaWF0IjoxNzYyOTQzMDk2LCJleHAiOjIwNzg1MTkwOTZ9.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
 
-const supabase = window.supabase.createClient(supabaseUrl, supabaseAnonKey);
+// API Key و Project Role
+const supabaseServiceKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemhpdmRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDMwOTYsImV4cCI6MjA3ODUxOTA5Nn0.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
+
+const supabase = window.supabase.createClient(supabaseUrl, supabaseServiceKey);
 
 let chatEnabled=false;
 const playerPositions = { blue: {}, yellow: {} };
+const nameColors = ["#e53935", "#1e88e5", "#fbc02d","#43a047","#8e24aa","#fb8c00","#00acc1","#d81b60","#6d4c41","#3949ab","#f4511e","#7cb342"];
 
-// ---------------- Navigation ----------------
+// Navigation
 function showSection(id){
   document.querySelectorAll('.container').forEach(c=>c.style.display='none');
   document.getElementById(id).style.display='block';
 }
 showSection('main');
 
-// ---------------- Main Team ----------------
+// تحقق من الوقت (من الأربعاء 3 ظهرًا حتى الأحد 12 ظهرًا)
+function isWithinAllowedTime(){
+  const now = new Date();
+  const day = now.getDay(); // 0=Sunday, 1=Monday, ..., 6=Saturday
+  const hour = now.getHours();
+
+  if(day===3 && hour>=15) return true; // الأربعاء بعد 3 ظهرًا
+  if(day===4 || day===5 || day===6) return true; // الخميس، الجمعة، السبت
+  if(day===0 && hour<12) return true; // الأحد قبل 12 ظهرًا
+  return false;
+}
+
+// Main team
 async function addPlayer(){
+  if(!isWithinAllowedTime()){
+    return alert("Adding players is only allowed from Wednesday 3 PM to Sunday 12 PM.");
+  }
   const name = document.getElementById("nameInput").value.trim();
   if(!name) return alert("Enter a name");
   const { data: team } = await supabase.from("main_team").select("id");
   if(team.length < 24){
-    await supabase.from("main_team").insert([{name,time: new Date().toISOString()}]);
+    const { error } = await supabase.from("main_team").insert([{name,time:Date.now()}]);
+    if(error) return alert(error.message);
   } else {
-    await supabase.from("waiting_list").insert([{name,time: new Date().toISOString()}]);
+    const { error } = await supabase.from("waiting_list").insert([{name,time:Date.now()}]);
+    if(error) return alert(error.message);
     alert("Main team is full (24). Player added to waiting list.");
   }
   document.getElementById("nameInput").value="";
@@ -196,26 +211,173 @@ async function loadPlayers(){
     </span></li>`);
 }
 
-// ---------------- Chat ----------------
-function enableChat(){
-  const name = document.getElementById('chatName').value.trim();
-  if(!name) return alert("Enter your name");
-  chatEnabled = true;
-  document.getElementById('chatInput').disabled=false;
-  document.getElementById('sendBtn').disabled=false;
-  document.getElementById('chatInput').focus();
+async function refillMainTeam(){
+  const { data: team } = await supabase.from("main_team").select("id");
+  const { data: waiting } = await supabase.from("waiting_list").select("*").order("id");
+  if(team.length < 24 && waiting.length > 0){
+    const first = waiting[0];
+    await supabase.from("main_team").insert([{ name:first.name, time:Date.now() }]);
+    await supabase.from("waiting_list").delete().eq("id", first.id);
+  }
+  loadPlayers();
 }
 
+// Draggable markers
+function createPlayerMarker(team, playerName, playerIndex, storedPosition=null) {
+  const fieldId = team === 'blue' ? 'bluePlan' : 'yellowPlan';
+  const field = document.getElementById(fieldId);
+
+  const marker = document.createElement('div');
+  marker.classList.add('player-marker');
+  marker.style.background = team==='blue'? '#1976d2' : '#fbc02d';
+  marker.innerText = playerIndex;
+
+  if(storedPosition){
+    marker.style.left = storedPosition.left;
+    marker.style.top = storedPosition.top;
+  } else {
+    marker.style.left = '10px';
+    marker.style.top = `${30 + playerIndex * 30}px`;
+  }
+
+  const label = document.createElement('div');
+  label.classList.add('player-name');
+  label.innerText = playerName;
+  label.style.color = 'black';
+  marker.appendChild(label);
+
+  let isDragging=false, offsetX, offsetY;
+
+  function startDrag(e){
+    isDragging=true;
+    const rect=marker.getBoundingClientRect();
+    if(e.type.startsWith('touch')){
+      const touch=e.touches[0];
+      offsetX=touch.clientX - rect.left;
+      offsetY=touch.clientY - rect.top;
+    } else {
+      offsetX=e.offsetX;
+      offsetY=e.offsetY;
+    }
+  }
+
+  function moveDrag(e){
+    if(!isDragging) return;
+    const rect=field.getBoundingClientRect();
+    let clientX, clientY;
+    if(e.type.startsWith('touch')){
+      const touch=e.touches[0];
+      clientX=touch.clientX;
+      clientY=touch.clientY;
+    } else {
+      clientX=e.clientX;
+      clientY=e.clientY;
+    }
+    marker.style.left = `${clientX - rect.left - offsetX}px`;
+    marker.style.top = `${clientY - rect.top - offsetY}px`;
+  }
+
+  async function endDrag(){
+    if(!isDragging) return;
+    isDragging=false;
+    playerPositions[team][playerName] = { left: marker.style.left, top: marker.style.top };
+    const table = team==='blue' ? 'blue_team' : 'yellow_team';
+    const { data: player } = await supabase.from(table).select('id').eq('name',playerName).limit(1);
+    if(player.length>0){
+      await supabase.from(table).update({position:playerPositions[team][playerName]}).eq('id', player[0].id);
+    }
+  }
+
+  marker.addEventListener('mousedown', startDrag);
+  marker.addEventListener('touchstart', startDrag);
+  document.addEventListener('mousemove', moveDrag);
+  document.addEventListener('touchmove', moveDrag);
+  document.addEventListener('mouseup', endDrag);
+  document.addEventListener('touchend', endDrag);
+
+  field.appendChild(marker);
+}
+
+// Blue team
+async function addBlue(){
+  const name=document.getElementById("blueInput").value.trim();
+  if(!name) return;
+  const { data: team } = await supabase.from("blue_team").select("id");
+  if(team.length >= 12) return alert("Blue team is full (12 players).");
+  await supabase.from("blue_team").insert([{name,time:Date.now()}]);
+  document.getElementById("blueInput").value="";
+  loadBlue();
+}
+
+async function loadBlue(){
+  const { data } = await supabase.from("blue_team").select("*").order("id");
+  const ul=document.getElementById("blueList");
+  const field=document.getElementById("bluePlan");
+  ul.innerHTML=""; field.innerHTML=`<div class="mid-line"></div><div class="center-circle"></div><div class="penalty-box-left"></div><div class="penalty-box-right"></div>`;
+  if(data) data.forEach((p,i)=>{
+    ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('blue_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('blue_team',${p.id})">🗑️</button></span></li>`;
+    createPlayerMarker('blue', p.name, i+1, p.position);
+  });
+}
+
+// Yellow team
+async function addYellow(){
+  const name=document.getElementById("yellowInput").value.trim();
+  if(!name) return;
+  const { data: team } = await supabase.from("yellow_team").select("id");
+  if(team.length >= 12) return alert("Yellow team is full (12 players).");
+  await supabase.from("yellow_team").insert([{name,time:Date.now()}]);
+  document.getElementById("yellowInput").value="";
+  loadYellow();
+}
+
+async function loadYellow(){
+  const { data } = await supabase.from("yellow_team").select("*").order("id");
+  const ul=document.getElementById("yellowList");
+  const field=document.getElementById("yellowPlan");
+  ul.innerHTML=""; field.innerHTML=`<div class="mid-line"></div><div class="center-circle"></div><div class="penalty-box-left"></div><div class="penalty-box-right"></div>`;
+  if(data) data.forEach((p,i)=>{
+    ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('yellow_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('yellow_team',${p.id})">🗑️</button></span></li>`;
+    createPlayerMarker('yellow', p.name, i+1, p.position);
+  });
+}
+
+// Edit & Delete
+async function deletePlayer(table,id){
+  if(!confirm("Are you sure you want to delete this player?")) return;
+  await supabase.from(table).delete().eq("id",id);
+  if(table==="main_team") await refillMainTeam();
+  reloadList(table);
+}
+async function editPlayer(table,id,oldName){
+  const newName=prompt("Edit name:", oldName);
+  if(!newName || newName.trim()==="") return;
+  await supabase.from(table).update({name:newName.trim()}).eq("id",id);
+  reloadList(table);
+}
+function reloadList(table){
+  if(table==="main_team" || table==="waiting_list") loadPlayers();
+  else if(table==="blue_team") loadBlue();
+  else if(table==="yellow_team") loadYellow();
+}
+
+// Chat
+function enableChat(){
+  const name=document.getElementById('chatName').value.trim();
+  if(!name) return alert("Enter your name");
+  chatEnabled=true;
+  document.getElementById('chatInput').disabled=false;
+  document.getElementById('sendBtn').disabled=false;
+}
 async function sendMessage(){
   if(!chatEnabled) return;
-  const name = document.getElementById('chatName').value.trim();
-  const text = document.getElementById('chatInput').value.trim();
+  const name=document.getElementById('chatName').value.trim();
+  const text=document.getElementById('chatInput').value.trim();
   if(!text) return;
-  await supabase.from("chat").insert([{name, text, time: new Date().toISOString()}]);
+  await supabase.from("chat").insert([{name,text,time:Date.now()}]);
   document.getElementById('chatInput').value="";
   loadChat();
 }
-
 async function loadChat(){
   const { data } = await supabase.from("chat").select("*").order("time");
   const box = document.getElementById("chatBox");
@@ -223,9 +385,9 @@ async function loadChat(){
   if(data) data.forEach(m=>{ box.innerHTML+=`<div><b>${m.name}:</b> ${m.text}</div>` });
 }
 
-// ---------------- Load everything ----------------
-loadPlayers();
-loadChat();
+// Load all
+loadPlayers(); loadBlue(); loadYellow(); loadChat();
 </script>
+
 </body>
 </html>
