--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 /* الاسم فوق الدائرة أفقي */
 .player-name {
   position: absolute;
-  top: -18px;   /* فوق الدائرة */
-  left: 50%;    
+  top: -18px;
+  left: 50%;
   transform: translateX(-50%);
   font-size: 12px;
-  color: black; /* اللون أسود */
+  color: black;
   white-space: nowrap;
   font-weight: bold;
 }
@@ -143,15 +143,11 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const supabaseUrl = "https://wihhlvgkjglphjzhivdn.supabase.co";
-
-// API Key و Project Role
-const supabaseServiceKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemhpdmRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDMwOTYsImV4cCI6MjA3ODUxOTA5Nn0.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
-
+const supabaseServiceKey = "YOUR_SERVICE_ROLE_KEY"; // ضع هنا المفتاح الصحيح
 const supabase = window.supabase.createClient(supabaseUrl, supabaseServiceKey);
 
 let chatEnabled=false;
 const playerPositions = { blue: {}, yellow: {} };
-const nameColors = ["#e53935", "#1e88e5", "#fbc02d","#43a047","#8e24aa","#fb8c00","#00acc1","#d81b60","#6d4c41","#3949ab","#f4511e","#7cb342"];
 
 // Navigation
 function showSection(id){
@@ -160,15 +156,14 @@ function showSection(id){
 }
 showSection('main');
 
-// تحقق من الوقت (من الأربعاء 3 ظهرًا حتى الأحد 12 ظهرًا)
+// تحقق من الوقت
 function isWithinAllowedTime(){
   const now = new Date();
-  const day = now.getDay(); // 0=Sunday, 1=Monday, ..., 6=Saturday
+  const day = now.getDay();
   const hour = now.getHours();
-
-  if(day===3 && hour>=15) return true; // الأربعاء بعد 3 ظهرًا
-  if(day===4 || day===5 || day===6) return true; // الخميس، الجمعة، السبت
-  if(day===0 && hour<12) return true; // الأحد قبل 12 ظهرًا
+  if(day===3 && hour>=15) return true;
+  if(day===4 || day===5 || day===6) return true;
+  if(day===0 && hour<12) return true;
   return false;
 }
 
@@ -227,8 +222,12 @@ function createPlayerMarker(team, playerName, playerIndex, storedPosition=null) 
   const fieldId = team === 'blue' ? 'bluePlan' : 'yellowPlan';
   const field = document.getElementById(fieldId);
 
+  // تجنب تكرار العلامات
+  if(field.querySelector(`.player-marker[data-name="${playerName}"]`)) return;
+
   const marker = document.createElement('div');
   marker.classList.add('player-marker');
+  marker.dataset.name = playerName;
   marker.style.background = team==='blue'? '#1976d2' : '#fbc02d';
   marker.innerText = playerIndex;
 
@@ -284,7 +283,7 @@ function createPlayerMarker(team, playerName, playerIndex, storedPosition=null) 
     const table = team==='blue' ? 'blue_team' : 'yellow_team';
     const { data: player } = await supabase.from(table).select('id').eq('name',playerName).limit(1);
     if(player.length>0){
-      await supabase.from(table).update({position: JSON.stringify(playerPositions[team][playerName])}).eq('id', player[0].id);
+      await supabase.from(table).update({position: playerPositions[team][playerName]}).eq('id', player[0].id);
     }
   }
 
@@ -312,11 +311,10 @@ async function addBlue(){
 async function loadBlue(){
   const { data } = await supabase.from("blue_team").select("*").order("id");
   const ul=document.getElementById("blueList");
-  const field=document.getElementById("bluePlan");
-  ul.innerHTML=""; field.innerHTML=`<div class="mid-line"></div><div class="center-circle"></div><div class="penalty-box-left"></div><div class="penalty-box-right"></div>`;
+  ul.innerHTML="";
   if(data) data.forEach((p,i)=>{
     ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('blue_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('blue_team',${p.id})">🗑️</button></span></li>`;
-    let pos = p.position ? JSON.parse(p.position) : null;
+    let pos = p.position || null;
     createPlayerMarker('blue', p.name, i+1, pos);
   });
 }
@@ -335,11 +333,10 @@ async function addYellow(){
 async function loadYellow(){
   const { data } = await supabase.from("yellow_team").select("*").order("id");
   const ul=document.getElementById("yellowList");
-  const field=document.getElementById("yellowPlan");
-  ul.innerHTML=""; field.innerHTML=`<div class="mid-line"></div><div class="center-circle"></div><div class="penalty-box-left"></div><div class="penalty-box-right"></div>`;
+  ul.innerHTML="";
   if(data) data.forEach((p,i)=>{
     ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('yellow_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('yellow_team',${p.id})">🗑️</button></span></li>`;
-    let pos = p.position ? JSON.parse(p.position) : null;
+    let pos = p.position || null;
     createPlayerMarker('yellow', p.name, i+1, pos);
   });
 }
