--- a/index.html
+++ b/index.html
@@ -6,13 +6,39 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-body { font-family: "Cairo", sans-serif; background-color: #121212; color: #e0e0e0; margin:0; padding:10px; text-align:center; }
-.nav-buttons { display:flex; justify-content:space-between; margin-bottom:20px; }
-button { padding:10px 16px; border:none; border-radius:8px; cursor:pointer; font-weight:700; }
+body {
+  font-family: "Cairo", sans-serif;
+  background-color: #121212;
+  color: #e0e0e0;
+  margin:0;
+  padding:10px;
+  text-align:center;
+}
+.nav-buttons {
+  display:flex;
+  justify-content:space-between;
+  margin-bottom:20px;
+}
+button {
+  padding:10px 16px;
+  border:none;
+  border-radius:8px;
+  cursor:pointer;
+  font-weight:700;
+}
 #homeBtn { background:#d32f2f; color:#fff; }
 #blueBtn { background:#1976d2; color:#fff; }
 #yellowBtn { background:#fbc02d; color:#000; }
-.container { display:none; max-width:95%; margin:auto; background:#1e1e1ecc; padding:20px 10px; border-radius:15px; box-shadow:0 0 10px #000; }
+
+.container {
+  display:none;
+  max-width:95%;
+  margin:auto;
+  background:#1e1e1ecc;
+  padding:20px 10px;
+  border-radius:15px;
+  box-shadow:0 0 10px #000;
+}
 h1,h2,h3 { margin:10px 0; }
 input[type=text] { padding:8px; width:80%; border-radius:8px; border:1px solid #555; margin:5px 0; background:#2c2c2c; color:#fff; text-align:center; }
 ul { list-style:none; padding:0; margin-top:10px; text-align:left; font-weight:bold; }
@@ -21,18 +47,39 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 #waitingList li { background:#ffe0e0; color:black; }
 #blueList li { background:rgba(25,118,210,0.7); color:black; }
 #yellowList li { background:rgba(251,192,42,0.7); color:black; }
-.action-btn { margin-left:6px; border:none; border-radius:5px; padding:4px 8px; cursor:pointer; font-weight:bold; }
+
+.action-btn {
+  margin-left:6px;
+  border:none;
+  border-radius:5px;
+  padding:4px 8px;
+  cursor:pointer;
+  font-weight:bold;
+}
 .edit-btn { background:#4caf50; color:#fff; }
 .delete-btn { background:#e53935; color:#fff; }
-#chatBox { max-height:300px; overflow-y:auto; background:#2c2c2c; padding:10px; border-radius:8px; margin-bottom:10px; text-align:left; }
+
 .player-marker { width:35px; height:35px; border-radius:50%; color:#fff; display:flex; align-items:center; justify-content:center; font-size:14px; font-weight:bold; position:absolute; cursor:grab; user-select:none; }
-.player-name { position: absolute; top: -18px; left: 50%; transform: translateX(-50%); font-size: 12px; color: black; white-space: nowrap; font-weight: bold; }
+/* الاسم فوق الدائرة أفقي */
+.player-name {
+  position: absolute;
+  top: -18px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 12px;
+  color: black;
+  white-space: nowrap;
+  font-weight: bold;
+}
+
 .field { width:100%; max-width:400px; height:250px; background:#4CAF50; margin:10px auto; border:2px solid #fff; border-radius:10px; position:relative; touch-action:none; }
+/* خطوط الملعب */
 .field .center-circle { position:absolute; width:50px;height:50px;border-radius:50%;border:2px solid #fff; top:50%; left:50%; transform:translate(-50%,-50%); }
 .field .penalty-box-left, .field .penalty-box-right { position:absolute;width:60px;height:120px;border:2px solid #fff; top:50%; transform:translateY(-50%); }
 .field .penalty-box-left { left:0; }
 .field .penalty-box-right { right:0; }
 .field .mid-line { position:absolute; width:0;height:100%;border-left:2px solid #fff; top:0; left:50%; transform:translateX(-50%); }
+
 </style>
 </head>
 <body>
@@ -48,16 +95,12 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   <h2>Add Player</h2>
   <input type="text" id="nameInput" placeholder="Enter player name">
   <button onclick="addPlayer()">Add</button>
+
   <h2>Main Team (24 max)</h2>
   <ul id="teamList"></ul>
+
   <h2>Waiting List</h2>
   <ul id="waitingList"></ul>
-  <h2>Chat</h2>
-  <input type="text" id="chatName" placeholder="Enter your name">
-  <button onclick="enableChat()">✔️ Confirm</button>
-  <div id="chatBox"></div>
-  <input type="text" id="chatInput" placeholder="Type message..." disabled>
-  <button id="sendBtn" onclick="sendMessage()" disabled>Send</button>
 </div>
 
 <div id="blue" class="container" style="background:#1565c0aa;">
@@ -91,35 +134,223 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const supabaseUrl = "https://wihhlvgkjglphjzhivdn.supabase.co";
-const supabaseAnonKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemhpdmRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDMwOTYsImV4cCI6MjA3ODUxOTA5Nn0.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
-const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
+const supabaseServiceKey = "YOUR_SERVICE_ROLE_KEY"; // ضع هنا المفتاح الصحيح
+const supabase = window.supabase.createClient(supabaseUrl, supabaseServiceKey);
 
-let chatEnabled=false;
 const playerPositions = { blue: {}, yellow: {} };
 
 // Navigation
-function showSection(id){ document.querySelectorAll('.container').forEach(c=>c.style.display='none'); document.getElementById(id).style.display='block'; }
+function showSection(id){
+  document.querySelectorAll('.container').forEach(c=>c.style.display='none');
+  document.getElementById(id).style.display='block';
+}
 showSection('main');
 
-// Main Team
-async function addPlayer(){ const name=document.getElementById("nameInput").value.trim(); if(!name) return alert("Enter a name"); const { data: team } = await supabase.from("main_team").select("id"); if(team.length < 24){ await supabase.from("main_team").insert([{name,time:Date.now()}]); } else { await supabase.from("waiting_list").insert([{name,time:Date.now()}]); alert("Main team is full (24). Player added to waiting list."); } document.getElementById("nameInput").value=""; loadPlayers(); }
-async function loadPlayers(){ const { data: team } = await supabase.from("main_team").select("*").order("id"); const { data: waiting } = await supabase.from("waiting_list").select("*").order("id"); const teamList = document.getElementById("teamList"); const waitingList = document.getElementById("waitingList"); teamList.innerHTML=""; waitingList.innerHTML=""; if(team) team.forEach((p,i)=>teamList.innerHTML+=`<li>${i+1}. ${p.name}</li>`); if(waiting) waiting.forEach((p,i)=>waitingList.innerHTML+=`<li>${i+1}. ${p.name}</li>`); }
+// تحقق من الوقت
+function isWithinAllowedTime(){
+  const now = new Date();
+  const day = now.getDay();
+  const hour = now.getHours();
+  if(day===3 && hour>=15) return true;
+  if(day===4 || day===5 || day===6) return true;
+  if(day===0 && hour<12) return true;
+  return false;
+}
 
-// Blue & Yellow Team
-async function addBlue(){ const name=document.getElementById("blueInput").value.trim(); if(!name) return; await supabase.from("blue_team").insert([{name,time:Date.now()}]); document.getElementById("blueInput").value=""; loadBlue(); }
-async function loadBlue(){ const { data } = await supabase.from("blue_team").select("*").order("id"); const ul=document.getElementById("blueList"); ul.innerHTML=""; if(data) data.forEach((p,i)=>ul.innerHTML+=`<li>${i+1}. ${p.name}</li>`);}
-async function addYellow(){ const name=document.getElementById("yellowInput").value.trim(); if(!name) return; await supabase.from("yellow_team").insert([{name,time:Date.now()}]); document.getElementById("yellowInput").value=""; loadYellow(); }
-async function loadYellow(){ const { data } = await supabase.from("yellow_team").select("*").order("id"); const ul=document.getElementById("yellowList"); ul.innerHTML=""; if(data) data.forEach((p,i)=>ul.innerHTML+=`<li>${i+1}. ${p.name}</li>`);}
+// Main team
+async function addPlayer(){
+  if(!isWithinAllowedTime()){
+    return alert("Adding players is only allowed from Wednesday 3 PM to Sunday 12 PM.");
+  }
+  const name = document.getElementById("nameInput").value.trim();
+  if(!name) return alert("Enter a name");
+  const { data: team } = await supabase.from("main_team").select("id");
+  if(team.length < 24){
+    const { error } = await supabase.from("main_team").insert([{name,time:Date.now()}]);
+    if(error) return alert(error.message);
+  } else {
+    const { error } = await supabase.from("waiting_list").insert([{name,time:Date.now()}]);
+    if(error) return alert(error.message);
+    alert("Main team is full (24). Player added to waiting list.");
+  }
+  document.getElementById("nameInput").value="";
+  loadPlayers();
+}
 
-// Chat
-function enableChat(){ const name=document.getElementById('chatName').value.trim(); if(!name) return alert("Enter your name"); chatEnabled=true; document.getElementById('chatInput').disabled=false; document.getElementById('sendBtn').disabled=false; loadChat(); }
-async function sendMessage(){ if(!chatEnabled) return; const name=document.getElementById('chatName').value.trim(); const text=document.getElementById('chatInput').value.trim(); if(!text) return; await supabase.from("chat").insert([{name,text,time:Date.now()}]); document.getElementById('chatInput').value=""; loadChat(); }
-async function loadChat(){ const { data } = await supabase.from("chat").select("*").order("time"); const box = document.getElementById("chatBox"); box.innerHTML=""; if(data) data.forEach(m=>{ box.innerHTML+=`<div><b>${m.name}:</b> ${m.text}</div>` }); box.scrollTop = box.scrollHeight; }
-document.getElementById('chatInput').addEventListener('keypress', function(e){ if(e.key==='Enter') sendMessage(); });
-setInterval(()=>{ if(chatEnabled) loadChat(); }, 1000);
+async function loadPlayers(){
+  const { data: team } = await supabase.from("main_team").select("*").order("id");
+  const { data: waiting } = await supabase.from("waiting_list").select("*").order("id");
+  const teamList = document.getElementById("teamList");
+  const waitingList = document.getElementById("waitingList");
+  teamList.innerHTML="";
+  waitingList.innerHTML="";
+  if(team) team.forEach((p,i)=>teamList.innerHTML+=`<li>${i+1}. ${p.name}
+    <span>
+      <button class="action-btn edit-btn" onclick="editPlayer('main_team',${p.id},'${p.name}')">✏️</button>
+      <button class="action-btn delete-btn" onclick="deletePlayer('main_team',${p.id})">🗑️</button>
+    </span></li>`);
+  if(waiting) waiting.forEach((p,i)=>waitingList.innerHTML+=`<li>${i+1}. ${p.name}
+    <span>
+      <button class="action-btn edit-btn" onclick="editPlayer('waiting_list',${p.id},'${p.name}')">✏️</button>
+      <button class="action-btn delete-btn" onclick="deletePlayer('waiting_list',${p.id})">🗑️</button>
+    </span></li>`);
+}
+
+async function refillMainTeam(){
+  const { data: team } = await supabase.from("main_team").select("id");
+  const { data: waiting } = await supabase.from("waiting_list").select("*").order("id");
+  if(team.length < 24 && waiting.length > 0){
+    const first = waiting[0];
+    await supabase.from("main_team").insert([{ name:first.name, time:Date.now() }]);
+    await supabase.from("waiting_list").delete().eq("id", first.id);
+  }
+  loadPlayers();
+}
+
+// Draggable markers
+function createPlayerMarker(team, playerName, playerIndex, storedPosition=null) {
+  const fieldId = team === 'blue' ? 'bluePlan' : 'yellowPlan';
+  const field = document.getElementById(fieldId);
+
+  if(field.querySelector(`.player-marker[data-name="${playerName}"]`)) return;
+
+  const marker = document.createElement('div');
+  marker.classList.add('player-marker');
+  marker.dataset.name = playerName;
+  marker.style.background = team==='blue'? '#1976d2' : '#fbc02d';
+  marker.innerText = playerIndex;
+
+  if(storedPosition){
+    marker.style.left = storedPosition.left;
+    marker.style.top = storedPosition.top;
+  } else {
+    marker.style.left = '10px';
+    marker.style.top = `${30 + playerIndex * 30}px`;
+  }
+
+  const label = document.createElement('div');
+  label.classList.add('player-name');
+  label.innerText = playerName;
+  label.style.color = 'black';
+  marker.appendChild(label);
+
+  let isDragging=false, offsetX, offsetY;
+
+  function startDrag(e){
+    isDragging=true;
+    const rect=marker.getBoundingClientRect();
+    if(e.type.startsWith('touch')){
+      const touch=e.touches[0];
+      offsetX=touch.clientX - rect.left;
+      offsetY=touch.clientY - rect.top;
+    } else {
+      offsetX=e.offsetX;
+      offsetY=e.offsetY;
+    }
+  }
+
+  function moveDrag(e){
+    if(!isDragging) return;
+    const rect=field.getBoundingClientRect();
+    let clientX, clientY;
+    if(e.type.startsWith('touch')){
+      const touch=e.touches[0];
+      clientX=touch.clientX;
+      clientY=touch.clientY;
+    } else {
+      clientX=e.clientX;
+      clientY=e.clientY;
+    }
+    marker.style.left = `${clientX - rect.left - offsetX}px`;
+    marker.style.top = `${clientY - rect.top - offsetY}px`;
+  }
+
+  async function endDrag(){
+    if(!isDragging) return;
+    isDragging=false;
+    playerPositions[team][playerName] = { left: marker.style.left, top: marker.style.top };
+    const table = team==='blue' ? 'blue_team' : 'yellow_team';
+    const { data: player } = await supabase.from(table).select('id').eq('name',playerName).limit(1);
+    if(player.length>0){
+      await supabase.from(table).update({position: playerPositions[team][playerName]}).eq('id', player[0].id);
+    }
+  }
+
+  marker.addEventListener('mousedown', startDrag);
+  marker.addEventListener('touchstart', startDrag);
+  document.addEventListener('mousemove', moveDrag);
+  document.addEventListener('touchmove', moveDrag);
+  document.addEventListener('mouseup', endDrag);
+  document.addEventListener('touchend', endDrag);
+
+  field.appendChild(marker);
+}
+
+// Blue team
+async function addBlue(){
+  const name=document.getElementById("blueInput").value.trim();
+  if(!name) return;
+  const { data: team } = await supabase.from("blue_team").select("id");
+  if(team.length >= 12) return alert("Blue team is full (12 players).");
+  await supabase.from("blue_team").insert([{name,time:Date.now()}]);
+  document.getElementById("blueInput").value="";
+  loadBlue();
+}
+
+async function loadBlue(){
+  const { data } = await supabase.from("blue_team").select("*").order("id");
+  const ul=document.getElementById("blueList");
+  ul.innerHTML="";
+  if(data) data.forEach((p,i)=>{
+    ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('blue_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('blue_team',${p.id})">🗑️</button></span></li>`;
+    let pos = p.position || null;
+    createPlayerMarker('blue', p.name, i+1, pos);
+  });
+}
+
+// Yellow team
+async function addYellow(){
+  const name=document.getElementById("yellowInput").value.trim();
+  if(!name) return;
+  const { data: team } = await supabase.from("yellow_team").select("id");
+  if(team.length >= 12) return alert("Yellow team is full (12 players).");
+  await supabase.from("yellow_team").insert([{name,time:Date.now()}]);
+  document.getElementById("yellowInput").value="";
+  loadYellow();
+}
+
+async function loadYellow(){
+  const { data } = await supabase.from("yellow_team").select("*").order("id");
+  const ul=document.getElementById("yellowList");
+  ul.innerHTML="";
+  if(data) data.forEach((p,i)=>{
+    ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('yellow_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('yellow_team',${p.id})">🗑️</button></span></li>`;
+    let pos = p.position || null;
+    createPlayerMarker('yellow', p.name, i+1, pos);
+  });
+}
+
+// Edit & Delete
+async function deletePlayer(table,id){
+  if(!confirm("Are you sure you want to delete this player?")) return;
+  await supabase.from(table).delete().eq("id",id);
+  if(table==="main_team") await refillMainTeam();
+  reloadList(table);
+}
+async function editPlayer(table,id,oldName){
+  const newName=prompt("Edit name:", oldName);
+  if(!newName || newName.trim()==="") return;
+  await supabase.from(table).update({name:newName.trim()}).eq("id",id);
+  reloadList(table);
+}
+function reloadList(table){
+  if(table==="main_team" || table==="waiting_list") loadPlayers();
+  else if(table==="blue_team") loadBlue();
+  else if(table==="yellow_team") loadYellow();
+}
 
 // Load all
-loadPlayers(); loadBlue(); loadYellow(); loadChat();
+loadPlayers(); loadBlue(); loadYellow();
 </script>
 
 </body>
